refine build public url

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Forth written in Typescript",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "build": "parcel build src/index.html  --public-url .",
     "lint": "eslint 'src/**/*.{js,ts,tsx}' --quiet --fix",
     "test": "npm run lint && jest --coverage"
   },
