--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@types/jest": "^26.0.15",
     "jest": "^26.6.1",
+    "jsdom": "^16.4.0",
     "ts-jest": "^26.4.3",
     "ts-node": "^9.0.0"
   }
