--- a/jest.config.json
+++ b/jest.config.json
@@ -37,5 +37,13 @@
       "functions": 1,
       "lines": 1
     }
-  }
+  },
+  "coveragePathIgnorePatterns": [
+    "<rootDir>/node_modules"
+  ],
+  "coverageReporters": [
+    "json",
+    "lcov",
+    "text"
+  ]
 }
